objects/Employee_Information__c.object
<CustomObject>
    <fields>
        <fullName>Cell_Phone_Number__c</fullName>
        <label>Cell Phone Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Please use the following format: YYYY/MM/DD</description>
        <inlineHelpText>Please use the following format: YYYY/MM/DD</inlineHelpText>
        <label>Date of Birth</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Income_Tax_Number__c</fullName>
        <label>Employee Income Tax Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Surname__c</fullName>
        <label>Employee Surname</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Names__c</fullName>
        <description>Employee full names</description>
        <inlineHelpText>Employee full names</inlineHelpText>
        <label>Full Names</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>ID Number</label>
        <length>13</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Next_of_Kin_Contact_Number__c</fullName>
        <label>Next of Kin Contact Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_of_Kin_ICOE__c</fullName>
        <description>Name and Surname of person to contact in case of emergency.</description>
        <inlineHelpText>Name and Surname of person to contact in case of emergency.</inlineHelpText>
        <label>Next of Kin (ICOE)</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Issue_Date__c</fullName>
        <label>Passport Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>Sponsor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Augustine</fullName>
                </value>
                <value>
                    <fullName>Brendan</fullName>
                </value>
                <value>
                    <fullName>Elicus</fullName>
                </value>
                <value>
                    <fullName>Hendri</fullName>
                </value>
                <value>
                    <fullName>Ivan</fullName>
                </value>
                <value>
                    <fullName>Izak</fullName>
                </value>
                <value>
                    <fullName>Leandi</fullName>
                </value>
                <value>
                    <fullName>Lochner</fullName>
                </value>
                <value>
                    <fullName>Rikus</fullName>
                </value>
                <value>
                    <fullName>Ruan</fullName>
                </value>
                <value>
                    <fullName>Tiaan</fullName>
                </value>
                <value>
                    <fullName>Wian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_1_Licence_Disk_Expiry_Date__c</fullName>
        <label>Vehicle 1 Licence Disk Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_1_Make_and_Variant__c</fullName>
        <inlineHelpText>Examples: BMW 320D, Mercedes 220d, Toyota FJ Cruiser etc.</inlineHelpText>
        <label>Vehicle 1 Make and Variant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_1_Registration_Number__c</fullName>
        <label>Vehicle 1 Registration Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vehicle_2_Licence_Disk_Expiry_Date__c</fullName>
        <label>Vehicle 2 Licence Disk Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_2_Make_and_Variant__c</fullName>
        <inlineHelpText>Examples: BMW 320D, Mercedes 220d, Toyota FJ Cruiser etc.</inlineHelpText>
        <label>Vehicle 2 Make and Variant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_2_Registration_Number__c</fullName>
        <label>Vehicle 2 Registration Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vehicle_3_Licence_Disk_Expiry_Date__c</fullName>
        <label>Vehicle 3 Licence Disk Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_3_Make_and_Variant__c</fullName>
        <inlineHelpText>Examples: BMW 320D, Mercedes 220d, Toyota FJ Cruiser etc.</inlineHelpText>
        <label>Vehicle 3 Make and Variant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_3_Registration_Number__c</fullName>
        <label>Vehicle 3 Registration Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Employee Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Surname__c</columns>
        <columns>Cell_Phone_Number__c</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>